--- a/FinalProject_Bozack.ipynb
+++ b/FinalProject_Bozack.ipynb
@@ -47,9 +47,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align='center' src=\"oregon_map.png\" width=500>\n",
-    "<img align='center' src=\"InAsReg.png\" width=400>\n",
-    "\n",
+    "<img align='left' src=\"oregon_map.png\" width=\"500\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img align='left' src=\"InAsReg.png\" width=\"500\"/>\n",
     "----"
    ]
   },
